--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-TELEGRAM_BOT_TOKEN=7819790960:AAFWL20ubWIlVALAs8zRooWUA6yQaqNYWoE
+GOOGLE_API_KEY = "AIzaSyC0JzS6SUuWMmd9JozRS1k9Vj2tNE7ujBA" 
+TELEGRAM_TOKEN = "7800719063:AAGBhqV84ctZ0RsAjnf5RLmVEUM74jGmiG0"
